--- a/templates/base.jinja
+++ b/templates/base.jinja
@@ -40,6 +40,8 @@
         </main>
         <footer>
             <p>
+                Données provenant de <a href="https://www.pokepedia.fr/" target="_blank">Poképédia</a> & <a href="https://www.serebii.net/" target="_blank">Serebii</a>.
+                <br />
                 © <span id="copy_date"></span> | <a href="https://github.com/Yarkis01/PokeAPI/blob/main/LICENSE" target="_blank">Mit License</a> | Une simple API crée avec ❤️ par <a href="https://github.com/Yarkis01" target="_blank">Yarkis</a> & <a href="https://github.com/Ashzuu" target="_blank">Ashzuu</a>
                 <br />
                 © Pokémon et tous les noms respectifs sont des marques déposées de <u>The Pokémon Company International</u>, <u>Game Freak</u> et <u>Nintendo</u>.
