feat: Ajout de la documentation

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,3 +1,24 @@
+@media screen and (max-width: 968px) {
+    .documentation {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    
+    #open_documentation_menu {display: block;}
+
+    .documentation_menu {
+        display: none;
+        width: 100%;
+        margin: 8px;
+    }
+
+    .documentation_content {
+        width: 100%;
+        margin-top: 8px;
+    }
+}
+
 @media screen and (max-width: 768px) {
     #routes-container div {
         flex: 0 0 85%;
@@ -29,25 +50,6 @@
 
     #tryit__copy-url, #tryit__copy-json {
         display: none;
-    }
-
-    .documentation {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    
-    #open_documentation_menu {display: block;}
-
-    .documentation_menu {
-        display: none;
-        width: 100%;
-        margin: 8px;
-    }
-
-    .documentation_content {
-        width: 100%;
-        margin-top: 8px;
     }
 }
 
