feat: Ajout d'une documentation (#27)
* feat: Ajout d'une base pour la documentation (WIP)

* feat(docs): Avancement sur la Documentation

- Les fichiers css sont maintenant réunies en 4 fichiers.
- Le menu de la documentation a été amélioré.
- La page d'accueil a été modifiée pour rajouter un bouton vers la documentation.
- La librairie HTMX a été rajoutée au projet.

* fix: Correction du responsive

* refactor: Modification du style général de la documentation + responsive

* feat: Avancement sur la documentation

* feat: Ajout de la librairie "highlightjs" pour la coloration syntaxique

* feat: Ajout de la documentation

--- a/templates/base.jinja
+++ b/templates/base.jinja
@@ -16,10 +16,12 @@
         <meta property="og:image" content="https://mon-api-pokemon.vercel.app/assets/logo.png" />
         <meta property="og:description" content="Une simple API Pokémon en français." />
 
-        <link rel="stylesheet" type="text/css" href="assets/css/base.css" />
-        <link rel="stylesheet" type="text/css" href="assets/css/{{ css_file }}" />
+        <link rel="stylesheet" type="text/css" href="/assets/css/styles.css" />
+        <link rel="stylesheet" type="text/css" href="/assets/css/responsive.css" />
+
+        <link rel="stylesheet" href="https://unpkg.com/@highlightjs/cdn-assets@11.7.0/styles/vs2015.min.css" />
     </head>
-    <body>
+    <body hx-boost="true">
         <header>
             <div>
                 <a href="{{ url_for('_home') }}">
@@ -40,12 +42,21 @@
         </main>
         <footer>
             <p>
-                {{ date.year }} | <a href="https://github.com/Yarkis01/PokeAPI/blob/main/LICENSE" target="_blank">Mit License</a> | Une simple API crée avec ❤️ par <a href="https://github.com/Yarkis01" target="_blank">Yarkis</a> & <a href="https://github.com/Ashzuu" target="_blank">Ashzuu</a>
+                Données provenant de <a href="https://www.pokepedia.fr/" target="_blank">Poképédia</a> & <a href="https://www.serebii.net/" target="_blank">Serebii</a>.
+                <br />
+                © <span id="copy_date"></span> | <a href="https://github.com/Yarkis01/PokeAPI/blob/main/LICENSE" target="_blank">Mit License</a> | Une simple API crée avec ❤️ par <a href="https://github.com/Yarkis01" target="_blank">Yarkis</a> & <a href="https://github.com/Ashzuu" target="_blank">Ashzuu</a>
                 <br />
                 © Pokémon et tous les noms respectifs sont des marques déposées de <u>The Pokémon Company International</u>, <u>Game Freak</u> et <u>Nintendo</u>.
             </p>
         </footer>
-    {% block javascript %}
-    {% endblock %}
+        <script>
+            document.getElementById("copy_date").innerText = new Date().getFullYear();
+        </script>
+        {% block javascript %}
+        {% endblock %}
+        <script src="/_vercel/insights/script.js" defer></script>
+        <script src="https://unpkg.com/htmx.org@1.8.5" defer></script>
+        <script src="https://unpkg.com/@highlightjs/cdn-assets@11.7.0/highlight.min.js"></script>
+        <script>hljs.highlightAll();</script>
     </body>
 </html>
