--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -23,6 +23,7 @@ html, body {
     margin: 0;
     padding: 0;
     background-color: var(--secondary-background-color);
+    color-scheme: dark;
 }
 header {
     display: flex;
@@ -71,6 +72,7 @@ code {
 pre code {
     display: block !important;
     padding: 1em !important;
+    overflow: auto;
 }
 
 /*
@@ -141,7 +143,13 @@ pre code {
     margin: 12px;
     text-align: justify;
 }
-#routes-container div p span {color: var(--secondary-color); font-weight: bold; font-family: 'Lexend Deca', sans-serif;}
+#routes-container div p span {
+    color: var(--secondary-color);
+    font-weight: bold;
+    font-family: 'Lexend Deca', sans-serif;
+    word-break: break-all;
+}
+
 #routes-container div p a {
     display: block;
     background-color: var(--secondary-color);
@@ -543,6 +551,7 @@ pre code {
 }
 
 .documentation_get {
+    display: inline-block;
     background-color: var(--secondary-color);
     color: var(--primary-color);
     border-radius: 8px;
