refactor: Mise à jour des références de l'API à Tyradex et des URL du site à tyradex.tech

--- a/templates/base.jinja
+++ b/templates/base.jinja
@@ -3,18 +3,18 @@
     <head>
         <meta charset="utf-8" />
         <meta name="robots" content="index, nofollow" />
-        <meta name="description" content="Une simple API Pokémon en français." />
+        <meta name="description" content="Découvrez notre API Pokémon en français pour accéder à une multitude d'informations sur les Pokémon. Explorez notre Pokédex complet et obtenez des données précises sur vos Pokémon préférés." />
         <meta name="keywords" content="pokemon pok&eacute;mon api pokeapi" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <title>PokéAPI - Une simple API Pokémon</title>
+        <title>Tyradex - Une API Pokémon en français</title>
         <link rel="icon" type="image/png" href="/assets/logo.png" />
 
         <meta property="og:site_name" content="PokéAPI" />
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://mon-api-pokemon.vercel.app/" />
-        <meta property="og:image" content="https://mon-api-pokemon.vercel.app/assets/logo.png" />
-        <meta property="og:description" content="Une simple API Pokémon en français." />
+        <meta property="og:url" content="https://tyradex.tech/" />
+        <meta property="og:image" content="https://tyradex.tech/assets/logo.png" />
+        <meta property="og:description" content="Découvrez notre API Pokémon en français pour accéder à une multitude d'informations sur les Pokémon. Explorez notre Pokédex complet et obtenez des données précises sur vos Pokémon préférés." />
 
         <link rel="stylesheet" type="text/css" href="/assets/css/styles.css" />
         <link rel="stylesheet" type="text/css" href="/assets/css/responsive.css" />
@@ -26,7 +26,7 @@
             <div>
                 <a href="{{ url_for('_home') }}">
                     <img src="/assets/logo.png" draggable="false" alt="Pokéball" />
-                    <p>PokéAPI</p>
+                    <p>Tyradex</p>
                 </a>
             </div>
             <div>
