refactor: Optimisation du site

--- a/templates/base.jinja
+++ b/templates/base.jinja
@@ -10,7 +10,7 @@
         <title>Tyradex - Une API Pokémon en français</title>
         <link rel="icon" type="image/png" href="/assets/logo.png" />
 
-        <meta property="og:site_name" content="PokéAPI" />
+        <meta property="og:site_name" content="Tyradex" />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://tyradex.tech/" />
         <meta property="og:image" content="https://tyradex.tech/assets/logo.png" />
