--- a/templates/views/homepage.jinja
+++ b/templates/views/homepage.jinja
@@ -67,7 +67,7 @@
 </section>
 
 <section id="documentation-container">
-    <h1>Envie d'aller plus loin ?</h1>
+    <h2>Envie d'aller plus loin ?</h2>
     <p>Penser à aller voir la documentation pour voir toutes les fonctionnalités disponibles.</p>
     <a href="/docs">Documentation</a>
 </section>
@@ -75,7 +75,7 @@
 <section id="tryit-container">
     <p id="tryit__title">Essayez maintenant !</p>
     <div>
-        <label></label>
+        <label for="tryit__input-text"></label>
         <input type="text" placeholder="pokemon/bulbizarre" id="tryit__input-text" />
         <button id="tryit__input-button" onclick="customApiRequest();" draggable="false" >Soumettre</button>
     </div>
